k8s-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
spec:
  selector:
    matchLabels:
      run: app-2
  replicas: 1
  template:
    metadata:
      labels:
        run: app-2
    spec:
      containers:
      - name: app-2
        image: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
