k8s-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1
  labels:
    run: app-1
spec:
  ports:
  - protocol: TCP
    # expose internally
    port: 8080
    # map to app
    targetPort: 80
  selector:
    run: app-1
